--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.10.9",
     "mongoose-currency": "^0.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
